Improve tabbed pane: allow right aligned tabs, allow tab groups Fixes, css and code improvements (#1037)

--- a/assets/scss/shortcodes/tabbed-pane.scss
+++ b/assets/scss/shortcodes/tabbed-pane.scss
@@ -6,20 +6,17 @@
 .tab-content {
   .tab-pane {
     .highlight {
-      border: none;
-      max-width: 100%;
+    margin: 0rem 0 0rem 0;
+    border: none;
+    max-width: 100%;
     }
-    pre {
-      border-left: 1px solid rgba(0, 0, 0, 0.125);
-      border-right: 1px solid rgba(0, 0, 0, 0.125);
-      border-bottom: 1px solid rgba(0, 0, 0, 0.125);
-    }
-    margin: 0rem;
+    margin-top: 0rem;
+    margin-bottom: 1.5rem;
     max-width: 80%;
-    border-left: none;
-    border-right: none;
-    border-bottom: none;
-  }
+    border-left: 1px solid rgba(0, 0, 0, 0.125);
+    border-right: 1px solid rgba(0, 0, 0, 0.125);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+    }
 }
 
 .tab-body {
